--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-amplify-angular": "^2.0.10",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "elasticsearch": "^15.2.0",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
